--- a/src/Web/Web.MVC/Web.MVC/Views/Auth/Register.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Auth/Register.cshtml
@@ -2,49 +2,50 @@
     ViewData["Title"] = "Регистрация";
 }
 @model Web.MVC.DTOs.Auth.RegisterDto
+<link rel="stylesheet" href="~/css/auth/Register.css"/>
 
-<h3>Зарегистрироваться</h3>
-<form method="post" asp-action="Register" asp-controller="Auth">
-    <div asp-validation-summary="ModelOnly"></div>
-    <div>
-        <label asp-for="Email"></label><br/>
-        <input asp-for="Email"/>
-        <span asp-validation-for="Email"></span>
-    </div>
-    <div>
-        <label asp-for="UserName"></label><br />
-        <input asp-for="UserName" />
-        <span asp-validation-for="UserName"></span>
-    </div>
-    <div>
-        <label asp-for="Password"></label><br />
-        <input asp-for="Password" />
-        <span asp-validation-for="Password"></span>
-    </div>
-    <div>
-        <label asp-for="PasswordConfirm"></label><br />
-        <input asp-for="PasswordConfirm" />
-        <span asp-validation-for="PasswordConfirm"></span>
-    </div>
-    <div>
-        <dnt-captcha asp-captcha-generator-max="99999"
-                     asp-captcha-generator-min="1000"
-                     asp-captcha-generator-language="Russian"
-                     asp-captcha-generator-display-mode="ShowDigits"
-                     asp-use-relative-urls="true"
-                     asp-placeholder="Введите капчу"
-                     asp-validation-error-message="Пожалуйста, пройдите капчу"
-                     asp-too-many-requests-error-message="Слишком много запросов"
-                     asp-font-name="Tahoma"
-                     asp-font-size="20"
-                     asp-fore-color="#333333"
-                     asp-back-color="#ccc"
-                     asp-text-box-class="text-box single-line form-control col-md-4"
-                     asp-text-box-template="<div class='input-group col-md-4'><span class='input-group-addon'><span class='glyphicon glyphicon-lock'></span></span>{0}</div>"
-                     asp-validation-message-class="text-danger"
-                     asp-refresh-button-class="glyphicon glyphicon-refresh btn-sm"
-                     asp-show-refresh-button="true"
-        />
-    </div>
-    <input type="submit" value="зарегистрироваться"/>
-</form>
+<div class="register-page-container">
+    <h2>Зарегистрироваться</h2>
+    <form method="post" asp-action="Register" asp-controller="Auth">
+        <div asp-validation-summary="ModelOnly"></div>
+        <span class="validation-message" asp-validation-for="Email"></span>
+        <span class="validation-message" asp-validation-for="UserName"></span>
+        <span class="validation-message" asp-validation-for="Password"></span>
+        <span class="validation-message" asp-validation-for="PasswordConfirm"></span>
+        <div>
+            <input class="register-input" asp-for="Email" placeholder="Эл. почта" />
+        </div>
+        <div>
+            <input class="register-input" asp-for="UserName" placeholder="Имя пользователя" />
+        </div>
+        <div>
+            <input class="register-input" asp-for="Password" placeholder="Пароль" />
+        </div>
+        <div>
+            <input class="register-input mb-3" asp-for="PasswordConfirm" placeholder="Подтвердить пароль" />
+        </div>
+        <div class="register-captcha">
+            <dnt-captcha asp-captcha-generator-max="99999"
+                         asp-captcha-generator-min="1000"
+                         asp-captcha-generator-language="Russian"
+                         asp-captcha-generator-display-mode="ShowDigits"
+                         asp-use-relative-urls="true"
+                         asp-placeholder="Введите капчу"
+                         asp-validation-error-message="Пожалуйста, пройдите капчу"
+                         asp-too-many-requests-error-message="Слишком много запросов"
+                         asp-font-name="Tahoma"
+                         asp-font-size="20"
+                         asp-fore-color="#333333"
+                         asp-back-color="#ccc"
+                         asp-text-box-class="register-input"
+                         asp-text-box-template="<div>{0}</div>"
+                         asp-validation-message-class="text-danger"
+                         asp-refresh-button-class="glyphicon glyphicon-refresh btn-sm"
+                         asp-show-refresh-button="true"/>
+        </div>
+        <input class="register-submit" type="submit" value="Зарегистрироваться" />
+    </form>
+</div>
+<script>
+
+</script>
