--- a/src/Web/Web.MVC/Web.MVC/wwwroot/css/auth/Login.css
+++ b/src/Web/Web.MVC/Web.MVC/wwwroot/css/auth/Login.css
@@ -13,7 +13,7 @@ h2 {
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
     padding: 40px;
     text-align: center;
-    margin: 30%;
+    margin: 0 30%;
     margin-top: 15%;
 }
 
@@ -52,37 +52,51 @@ h2 {
     color: white;
 }
 
+.validation-message {
+    color: red;
+    font-size: 15px;
+    margin-bottom: 10px;
+    display: block;
+    text-align: left;
+    margin-left: 5%;
+}
+
+.validation-summary {
+    text-align: left;
+    margin-left: 5%;
+}
+
 @media (max-width: 1200px) {
     .login-form-container {
-        margin: 25%;
+        margin: 0 25%;
         margin-top: 13%;
     }
 }
 
 @media (max-width: 992px) {
     .login-form-container {
-        margin: 15%;
+        margin: 0 15%;
         margin-top: 11%;
     }
 }
 
 @media (max-width: 768px) {
     .login-form-container {
-        margin: 8%;
+        margin: 0 8%;
         margin-top: 9%;
     }
 }
 
 @media (max-width: 600px) {
     .login-form-container {
-        margin: 5%;
+        margin: 0 5%;
         margin-top: 7%;
     }
 }
 
 @media (max-width: 520px) {
     .login-form-container {
-        margin: 3%;
+        margin: 0 3%;
         margin-top: 5%;
     }
 }
