--- a/src/Web/Web.MVC/Web.MVC/Views/Admin/CreateBotAccount.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Admin/CreateBotAccount.cshtml
@@ -6,7 +6,7 @@
 <h3>Создать бота</h3>
 
 <form method="post">
-    <div asp-validation-summary="All"></div>
+    <div asp-validation-summary="ModelOnly"></div>
     <div>
         <label asp-for="Email"></label><br/>
         <input asp-for="Email"/>
