--- a/src/Web/Web.MVC/Web.MVC/Views/User/GetUser.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/User/GetUser.cshtml
@@ -7,14 +7,14 @@
 <link rel="stylesheet" href="~/css/user/navbar.css"/>
 <div>
     <div class="profile-navbar">
-        <a class="active" asp-controller="User" asp-action="GetUser" asp-route-userName="@Model.UserName">профиль</a>
-        <a asp-controller="User" asp-action="GetUsersCreatedDiscussions" asp-route-userName="@Model.UserName"
+        <a class="active-navbar-link" asp-controller="User" asp-action="GetUser" asp-route-userName="@Model.UserName">профиль</a>
+        <a class="profile-navbar-link" asp-controller="User" asp-action="GetUsersCreatedDiscussions" asp-route-userName="@Model.UserName"
            asp-route-pageNumber="1" asp-route-pageSize="20">обсуждения</a>
-        <a asp-controller="User" asp-action="GetUsersCreatedComments" asp-route-pageNumber="1" asp-route-pageSize="20"
+        <a class="profile-navbar-link" asp-controller="User" asp-action="GetUsersCreatedComments" asp-route-pageNumber="1" asp-route-pageSize="20"
            asp-route-userName="@Model.UserName">комментарии</a>
         @if (User.Identity.Name == Model.UserName || User.IsInRole(UserRoleConstants.AdminRole) || User.IsInRole(UserRoleConstants.ModeratorRole))
         {
-            <a asp-controller="Bookmark" asp-action="GetBookmarksByNovelty" asp-route-pageNumber="1" asp-route-pageSize="20"
+            <a class="profile-navbar-link" asp-controller="Bookmark" asp-action="GetBookmarksByNovelty" asp-route-pageNumber="1" asp-route-pageSize="20"
                asp-route-userName="@Model.UserName">
                 закладки
             </a>
