--- a/src/Web/Web.MVC/Web.MVC/Views/Moderator/GetReportsByUserName.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Moderator/GetReportsByUserName.cshtml
@@ -9,14 +9,14 @@
 <link rel="stylesheet" href="~/css/user/navbar.css" />
 
 <div class="profile-navbar">
-    <a asp-controller="User" asp-action="GetUser" asp-route-userName="@ViewBag.ReportedByUserName">профиль</a>
-    <a asp-controller="User" asp-action="GetUsersCreatedDiscussions" asp-route-userName="@ViewBag.ReportedByUserName"
+    <a class="profile-navbar-link" asp-controller="User" asp-action="GetUser" asp-route-userName="@ViewBag.ReportedByUserName">профиль</a>
+    <a class="profile-navbar-link" asp-controller="User" asp-action="GetUsersCreatedDiscussions" asp-route-userName="@ViewBag.ReportedByUserName"
        asp-route-pageNumber="1" asp-route-pageSize="20">обсуждения</a>
-    <a asp-controller="User" asp-action="GetUsersCreatedComments" asp-route-pageNumber="1" asp-route-pageSize="20"
+    <a class="profile-navbar-link" asp-controller="User" asp-action="GetUsersCreatedComments" asp-route-pageNumber="1" asp-route-pageSize="20"
        asp-route-userName="@ViewBag.ReportedByUserName">комментарии</a>
     @if (User.Identity.Name == ViewBag.ReportedByUserName || User.IsInRole(UserRoleConstants.AdminRole) || User.IsInRole(UserRoleConstants.ModeratorRole))
     {
-        <a asp-controller="Bookmark" asp-action="GetBookmarksByNovelty" asp-route-pageNumber="1" asp-route-pageSize="20"
+        <a class="profile-navbar-link" asp-controller="Bookmark" asp-action="GetBookmarksByNovelty" asp-route-pageNumber="1" asp-route-pageSize="20"
            asp-route-userName="@ViewBag.ReportedByUserName">
             закладки
         </a>
@@ -41,7 +41,7 @@
         @if (User.IsInRole(UserRoleConstants.AdminRole) || User.IsInRole(UserRoleConstants.ModeratorRole))
         {
             <div>
-                <button id="dropdownAdminButton" class="open-dropdown-btn active">админ &#x25BC;</button>
+                <button id="dropdownAdminButton" class="open-dropdown-btn active-navbar-link">админ &#x25BC;</button>
                 <div id="dropdownAdminList" class="dropdown-list">
                     <a class="dropdown-content" asp-controller="Moderator" asp-action="GetSuggestedTopicsByUserName" asp-route-pageNumber="1"
                        asp-route-pageSize="20" asp-route-userName="@ViewBag.ReportedByUserName">предложенные темы</a>
@@ -49,7 +49,7 @@
                        asp-route-userName="@ViewBag.ReportedByUserName" asp-route-pageNumber="1" asp-route-pageSize="20">предложенные обсуждения</a>
                     <a class="dropdown-content" asp-controller="Moderator" asp-action="GetSuggestedCommentsByUserName" asp-route-pageNumber="1"
                        asp-route-pageSize="20" asp-route-userName="@ViewBag.ReportedByUserName">предложенные комментарии</a>
-                    <a class="dropdown-content active" asp-controller="Moderator" asp-action="GetReportsByUserName" asp-route-pageNumber="1"
+                    <a class="dropdown-content active-dropdown-content" asp-controller="Moderator" asp-action="GetReportsByUserName" asp-route-pageNumber="1"
                        asp-route-pageSize="20" asp-route-userName="@ViewBag.ReportedByUserName">жалобы</a>
                 </div>
             </div>
