--- a/src/Web/Web.MVC/Web.MVC/Views/Moderator/GetSuggestedTopicsByUserName.cshtml
+++ b/src/Web/Web.MVC/Web.MVC/Views/Moderator/GetSuggestedTopicsByUserName.cshtml
@@ -7,14 +7,14 @@
 <link rel="stylesheet" href="~/css/user/navbar.css" />
 
 <div class="profile-navbar">
-    <a asp-controller="User" asp-action="GetUser" asp-route-userName="@Model.SuggestedByUserName">профиль</a>
-    <a asp-controller="User" asp-action="GetUsersCreatedDiscussions" asp-route-userName="@Model.SuggestedByUserName"
+    <a class="profile-navbar-link" asp-controller="User" asp-action="GetUser" asp-route-userName="@Model.SuggestedByUserName">профиль</a>
+    <a class="profile-navbar-link" asp-controller="User" asp-action="GetUsersCreatedDiscussions" asp-route-userName="@Model.SuggestedByUserName"
        asp-route-pageNumber="1" asp-route-pageSize="20">обсуждения</a>
-    <a asp-controller="User" asp-action="GetUsersCreatedComments" asp-route-pageNumber="1" asp-route-pageSize="20"
+    <a class="profile-navbar-link" asp-controller="User" asp-action="GetUsersCreatedComments" asp-route-pageNumber="1" asp-route-pageSize="20"
        asp-route-userName="@Model.SuggestedByUserName">комментарии</a>
     @if (User.Identity.Name == Model.SuggestedByUserName || User.IsInRole(UserRoleConstants.AdminRole) || User.IsInRole(UserRoleConstants.ModeratorRole))
     {
-        <a asp-controller="Bookmark" asp-action="GetBookmarksByNovelty" asp-route-pageNumber="1" asp-route-pageSize="20"
+        <a class="profile-navbar-link" asp-controller="Bookmark" asp-action="GetBookmarksByNovelty" asp-route-pageNumber="1" asp-route-pageSize="20"
            asp-route-userName="@Model.SuggestedByUserName">
             закладки
         </a>
@@ -39,9 +39,9 @@
         @if (User.IsInRole(UserRoleConstants.AdminRole) || User.IsInRole(UserRoleConstants.ModeratorRole))
         {
             <div>
-                <button id="dropdownAdminButton" class="open-dropdown-btn active">админ &#x25BC;</button>
+                <button id="dropdownAdminButton" class="open-dropdown-btn active-navbar-link">админ &#x25BC;</button>
                 <div id="dropdownAdminList" class="dropdown-list">
-                    <a class="dropdown-content active" asp-controller="Moderator" asp-action="GetSuggestedTopicsByUserName" asp-route-pageNumber="1"
+                    <a class="dropdown-content active-dropdown-content" asp-controller="Moderator" asp-action="GetSuggestedTopicsByUserName" asp-route-pageNumber="1"
                        asp-route-pageSize="20" asp-route-userName="@Model.SuggestedByUserName">предложенные темы</a>
                     <a class="dropdown-content" asp-controller="Moderator" asp-action="GetSuggestedDiscussionsByUserName"
                        asp-route-userName="@Model.SuggestedByUserName" asp-route-pageNumber="1" asp-route-pageSize="20">предложенные обсуждения</a>
